add: strict request check via api
