# backend/user/api.yaml
@@ -46,7 +46,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/registerAuthInfo'
+              $ref: '#/components/schemas/registerInternalAuthInfo'
       security:
         - JWTAcessToken: [ ]
         - CSRFAcessToken: [ ]
@@ -819,6 +819,10 @@ components:
           type: string
     registration:
       title: 'Registration request info'
+      oneOf:
+        - $ref: '#/components/schemas/registrationSchool'
+        - $ref: '#/components/schemas/registrationUniversity'
+    registrationSchool:
       required:
         - auth_info
         - personal_info
@@ -829,11 +833,24 @@ components:
         personal_info:
           $ref: '#/components/schemas/personalInfo'
         register_type:
-          $ref: '#/components/schemas/userType'
-        student_info:
-          $ref: '#/components/schemas/studentInfo'
+          $ref: '#/components/schemas/userTypeSchool'
         register_confirm:
           $ref: '#/components/schemas/registerConfirm'
+    registrationUniversity:
+      required:
+        - auth_info
+        - personal_info
+        - register_type
+        - student_info
+      properties:
+        auth_info:
+          $ref: '#/components/schemas/registerAuthInfo'
+        personal_info:
+          $ref: '#/components/schemas/personalInfo'
+        register_type:
+          $ref: '#/components/schemas/userTypeUniversity'
+        student_info:
+          $ref: '#/components/schemas/studentInfo'
     registerAuthInfo:
       title: 'Authentication info'
       required:
@@ -842,9 +859,12 @@ components:
       properties:
         email:
           type: string
+          pattern: '^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
+          maxLength: 64
         password:
           type: string
           format: password
+          maxLength: 128
     personalInfo:
       title: 'Personal info'
       required:
@@ -855,13 +875,27 @@ components:
       properties:
         first_name:
           type: string
+          maxLength: 40
         second_name:
           type: string
+          maxLength: 40
         middle_name:
           type: string
+          maxLength: 40
         date_of_birth:
           type: string
           format: date
+    registerInternalAuthInfo:
+      title: 'Authentication info for internal users'
+      required:
+        - username
+        - password
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+          format: password
     personalInfoUpdate:
       title: 'Update request for personal info'
       description: Set fields that should be changed
@@ -888,20 +922,27 @@ components:
       properties:
         phone_number:
           type: string
+          pattern: '(?:(?:\+?1\s*(?:[.-]\s*)?)?(?:(\s*([2-9]1[02-9]|[2-9][02-8]1|[2-9][02-8][02-9]‌​)\s*)|([2-9]1[02-9]|[2-9][02-8]1|[2-9][02-8][02-9]))\s*(?:[.-]\s*)?)([2-9]1[02-9]‌​|[2-9][02-9]1|[2-9][02-9]{2})\s*(?:[.-]\s*)?([0-9]{2})\s*(?:[.-]\s*)?([0-9]{2})(?:\s*(?:#|x\.?|ext\.?|extension)\s*(\d+))?$'
+          maxLength: 32
         university:
           type: string
+          maxLength: 32
         grade:
           type: integer
           minimum: 1
           maximum: 5
         university_country:
           type: string
+          maxLength: 32
         citizenship:
           type: string
+          maxLength: 32
         region:
           type: string
+          maxLength: 32
         city:
           type: string
+          maxLength: 32
     studentInfoUpdate:
       title: 'Update request for student info'
       description: Set fields that should be changed
@@ -931,9 +972,11 @@ components:
       properties:
         registration_number:
           type: string
+          maxLength: 64
         one_time_password:
           type: string
           format: password
+          maxLength: 128
     authentication:
       title: 'Authentication request info'
       required:
@@ -1032,6 +1075,14 @@ components:
       title: 'User type'
       type: string
       enum: [ 'PreUniversity', 'Enrollee', 'School', 'University', 'Internal', 'PreRegister' ]
+    userTypeSchool:
+      title: 'User type'
+      type: string
+      enum: [ 'PreUniversity', 'Enrollee', 'School' ]
+    userTypeUniversity:
+      title: 'User type'
+      type: string
+      enum: [ 'University' ]
     userList:
       title: 'List of users'
       required:
